--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@ Ketentuan Program yang dibuat antara lain :
 3. Routing Halaman dapat disesuaikan sendiri. Contoh : Halaman 2 hanya dapa diakses dari memilih note di halaman 1, Hal 3 dapat diakses dari mana saja. 
 -->
 
-<h1>Add Your Note Here</h1>
+<!-- <h1>Add Your Note Here</h1>
 
 <input type="text" placeholder="Judul Note" [(ngModel)]="judul">
 <br> <br>
@@ -29,4 +29,9 @@ Ketentuan Program yang dibuat antara lain :
 <input type="text" placeholder="tahun" [(ngModel)]="tahun">
 <br><br>
 
-<button (click)="tambahnote()">TAMBAH NOTE</button>
+<button (click)="tambahnote()">TAMBAH NOTE</button> -->
+
+<button routerLink="/home">LOGIN</button>
+
+<button routerLink='/home'> TAMBAH NOTE </button>
+<button routerLink='/favorite'> LIST FAVORITE </button>
