--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Add Your Note Here</h1>
+<!-- <h1>Add Your Note Here</h1>
 
 <input type="text" placeholder="Judul Note" [(ngModel)]="judul">
 <br> <br>
@@ -13,4 +13,7 @@
 <input type="text" placeholder="tahun" [(ngModel)]="tahun">
 <br><br>
 
-<button (click)="tambahnote()">TAMBAH NOTE</button>
+<button (click)="tambahnote()">TAMBAH NOTE</button> -->
+
+
+<!-- works -->
