6 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@ Ketentuan Program yang dibuat antara lain :
 
 <button (click)="tambahnote()">TAMBAH NOTE</button> -->
 
-<button routerLink="/home">LOGIN</button>
-
 <button routerLink='/home'> TAMBAH NOTE </button>
 <button routerLink='/favorite'> LIST FAVORITE </button>
+
+<router-outlet></router-outlet>
