5 files modified, 1 added

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -2,8 +2,6 @@
 	detail works!
 </p>
 
-<input type="text" [(ngModel)]="judul">
-<br><br>
-<input type="text" [(ngModel)]="isi">
-<br><br>
-<input type="text" [(ngModel)]="tanggal">
+<div *ngFor="">
+
+</div>
