--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,7 @@
 <input type="text" placeholder="tulis isi note disini" [(ngModel)]="isi">
 <br> <br>
 
-<input type="text" placeholder="tanggal" [(ngModel)]="tanggal">
-<br>
-<input type="text" placeholder="bulan" [(ngModel)]="bulan">
-<br>
-<input type="text" placeholder="tahun" [(ngModel)]="tahun">
+<input type="date" [(ngModel)]="mergetgl">
 <br><br>
 
 <button (click)="tambahnote()">SAVE NOTE</button>
