--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -6,11 +6,13 @@
 			<th>Judul</th>
 			<th>Isi</th>
 			<th>Tanggal</th>
+      <th>Favorite</th>
 		</tr>
 		<tr *ngFor="let count of datatemp; let i = index">
 			<td>{{datatemp[i].judul}}</td>
 			<td>{{datatemp[i].isi}}</td>
 			<td>{{datatemp[i].tanggal}}</td>
+      <td><button (click)="btnfav()">Favorite</button></td>
 		</tr>
 
 	</table>
