--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -12,7 +12,7 @@
 			<td>{{datatemp[i].judul}}</td>
 			<td>{{datatemp[i].isi}}</td>
 			<td>{{datatemp[i].tanggal}}</td>
-      <td><button (click)="btnfav()">Favorite</button></td>
+      <td><button (click)="btnfav(i)">Favorite</button></td>
 		</tr>
 
 	</table>
